# gitignore-gen

./: .editorconfig  .gitignore  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  TODO.md  build.rs  cliff.toml  go.mod  main.go  rust-toolchain.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/: root.go  root_test.go
docs/: ARCHITECTURE.md  BUILDING.md
scripts/: install-from-source.ps1  install-from-source.sh  install.ps1  install.sh
src/: analyzer.rs  fetcher.rs  main.rs  templates.rs
src/commands/: generate.rs  mod.rs  uninstall.rs  update.rs
