[package]
name = "gitignore-gen"
version = "2.0.0"
edition = "2021"
description = "Generate .gitignore files based on project analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AriajSarkar/gitignore-gen"
keywords = ["gitignore", "cli", "generator"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gitignore-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
